           Enhanced and linked to the Script API overview. Thanks to xley.

20100526:  Added some example data loading and external scripts. Thanks to xley.

20100527:  Internal changes to the indicator plugins to use Indicator:: when passing data.

           Added patch #3007713 (Populate quotes db from Yahoo). This is a nice python script to download and
           install quotes from yahoo. Added to the misc/CUS_examples section. I changed the name to
           getYahooHistQuotes.py. Thanks to wolfch for the patch.

20100529:  Added new INDICATOR command GET_INDEX_DATE. This returns the string date at index position.

           Added script API for all the chart objects. Allows the creation of chart objects to scripted indicators.
           The chart objects are dynamic and are not saved permanantly to the database. This allows for fast, dynamic
           changes to the charts ie. viewing minute bars with rapidly changing patterns. Arrows, support lines and
           retracements to appear only under specific circumstances and price levels.

20100530:  Applied patch #3009102 (Update for patch 3007713). thanks to wolfch for the patch.

           Fixed bug that did not update the toolbar bar spacing buttons when the preferences was changed.

20100601:  Fixed bug that did not toggle the date plot on indicators.

           Chart and group panel lists now enter key selection and single click selection.

           Added refresh list signals for the chart/group panels after a script finishes.

           Fixed bug running an indicator script from the script panel run menu segfaults.

20100602:  Added new plugin panel to the main app. This will be used for user created plugins that do
           whatever they want. The initial plugin will be the return of the CSV plugin to import CSV
           files. Works much like the old app.

20100603:  CSV plugin is ready for testing. i would appreciate user feedback on improvements and
           bugs. thank you.
