@@ -144,6 +144,21 @@ replaced.<br>
 On success returns '0', failure returns "ERROR"<br>
 <br>
 <br>
+<hr style="width: 100%; height: 2px;"><br>
+<br>
+<p style="font-weight: bold;">INDICATOR,DELETE,&lt;NAME&gt;<br>
+</p>
+<p>Deletes the indicator from memory. Used in script loops where an
+indicator is created with multiple symbols.<br>
+</p>
+<ul>
+  <li>&lt;NAME&gt; is the variable name of the indicator<br>
+  </li>
+</ul>
+On success returns '0', failure returns "ERROR"<br>
+<br>
+<br>
+<br>
 <br>
 <br>
 </body>
