@@ -14,8 +14,6 @@ To Do:
 - add tooltips
 - interactive scripting
 - complete backtesting module
-- replace CLEAR script command with a specific DELETE command
-- add delete symbol option to the chart panel
 
 
 Priority
