@@ -43,7 +43,6 @@ class ExScript : public QObject
     enum Function
     {
       CO, // chart object functions
-      DELETE, // deletes a single indicator
       INDICATOR, // get indicator functions
       GROUP, // group database functions
       PLOT, // plot the desired indicator
